[package]
name = "nvcodec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
ffmpeg-next = "6.1.0"
futures = "0.3.29"
nvcodec-sys = { path = "../nvcodec-sys" }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
